feat: Implement Redis caching and user management features

--- a/src/Recruitment.System.Api/appsettings.Development.json
+++ b/src/Recruitment.System.Api/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "RSDb": "Server=localhost,1433;Database=RecruitmentDb;Uid=SA;Pwd=SqlServer2019!;TrustServerCertificate=True"
+    "RSDb": "Server=localhost,1433;Database=RecruitmentDb;Uid=SA;Pwd=SqlServer2019!;TrustServerCertificate=True",
+    "RedisDb": "localhost:6379"
   }
 }
